app settingd configured

--- a/src/PharmacyFinder.API/appsettings.Development.json
+++ b/src/PharmacyFinder.API/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=PharmacyFinder_Dev;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   }
 }
