--- a/src/PharmacyFinder.API/appsettings.json
+++ b/src/PharmacyFinder.API/appsettings.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=PharmacyFinder;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Secret": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!123",
+    "Issuer": "PharmacyFinder",
+    "Audience": "PharmacyFinderUsers",
+    "ExpiryInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*"
