--- a/src/PharmacyFinder.API/PharmacyFinder.API.csproj
+++ b/src/PharmacyFinder.API/PharmacyFinder.API.csproj
@@ -9,7 +9,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -17,11 +16,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
+    
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="10.0.0" /> 
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PharmacyFinder.Core\PharmacyFinder.Core.csproj" />
-    <ProjectReference Include="..\PharmacyFinder.Infrastructure\PharmacyFinder.Infrastructure.csproj" />
+    <ProjectReference Include="..\PharmacyFinder.Infrastructure\PharmacyFinder.Infrastructure.csproj" /> 
   </ItemGroup>
 
 </Project>
