--- a/src/PharmacyFinder.API/appsettings.json
+++ b/src/PharmacyFinder.API/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=PharmacyFinder;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
-  "Jwt": {
+  "JwtSettings": {
     "Secret": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!123",
     "Issuer": "PharmacyFinder",
     "Audience": "PharmacyFinderUsers",
